fixed the align of the items

--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ body {
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    margin-left: 230px;
 }
 
 .suptitle {
@@ -111,7 +112,6 @@ body {
     font-weight: 400;
     font-style: Regular;
     font-size: 57.33px;
-
     line-height: 94%;
     letter-spacing: -7%;
     color: #ffff;
@@ -171,7 +171,7 @@ body {
 
 .ice-cream-photo {
     height: 600px;
-
+ margin-left: -180px;
 }
 
 
@@ -460,7 +460,6 @@ body {
 
 
 .ordering-app-link-image {
-    object-fit: contain;
     display: block;
     width: 167px;
     height: 56px;
